@@ -1,3 +1,8 @@
+2012-10-26  Pedro Vicente  <pvicente@uci.edu>
+
+	* ncks: regression test #22: Extract variables in groups (test -g with -v )
+	* ncks: regression test #23: Create variables in groups (test -G with -v and -g )
+
 2012-10-26  Charlie Zender  <zender@uci.edu>
 
 	* ncecat: Copy global attributes of first file to root of output file
